--- a/.github/workflows/kustomize.yml
+++ b/.github/workflows/kustomize.yml
@@ -13,3 +13,13 @@ jobs:
     steps:
       - name: Check Out Repo 
         uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v
