--- a/.github/workflows/kustomize.yml
+++ b/.github/workflows/kustomize.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v
+        uses: docker/setup-buildx-action@v1
