--- a/.github/workflows/kustomize.yml
+++ b/.github/workflows/kustomize.yml
@@ -23,3 +23,16 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+        
+      
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/react-example-app:7.0.0
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
