--- a/.github/workflows/kustomize.yml
+++ b/.github/workflows/kustomize.yml
@@ -36,3 +36,32 @@ jobs:
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+        
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    needs: build
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Setup Kustomize
+        uses: imranismail/setup-kustomize@v1
+        with:
+          kustomize-version: "3.6.1"
+
+      - name: Update Kubernetes resources
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        run: |-
+          cd manifests
+          kustomize edit set image ${{ secrets.DOCKER_USERNAME }}/react-example-app:7.0.0
+          cat kustomization.yaml
+          kustomize build ./ > ../kustomization/manifests.yaml
+          cat ../kustomization/manifests.yaml
+      - uses: EndBug/add-and-commit@v7
+        with:
+          default_author: github_actions
+          branch: kustomize
