--- a/.github/workflows/kustomize.yml
+++ b/.github/workflows/kustomize.yml
@@ -65,3 +65,20 @@ jobs:
         with:
           default_author: github_actions
           branch: kustomize
+          
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: deploy
+    continue-on-error: true
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Datree
+        run: curl https://get.datree.io | /bin/bash
+        
+      - name: Run Datree's policy check
+        run: datree test ./kustomization/manifests.yaml
+        
