--- a/.github/workflows/kustomize.yml
+++ b/.github/workflows/kustomize.yml
@@ -71,6 +71,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     continue-on-error: true
+    env:
+      DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }} 
 
     steps:
       - name: Checkout
